# Intelligent-Product-Inspection-Agent-Platform

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BRANCH_OWNERSHIP_AND_MERGE_CHECKLIST.md  BRANCH_RULES.md  CLAUDE.md  DESIGN.md  Makefile  PIAP_BAD_003_Architecture.docx  PIAP_INT_008_three_workspace_collab_spec_v1_0_0.docx  PIAP_SYS_002_MySQL.docx  PRODUCT.md  README.md  WORKTREE_STATUS.md  docker-compose.lan.yml  docker-compose.langfuse.yml  docker-compose.yml  package-lock.json  skills-lock.json  task.md  test_meeting.py  平台角色改进-最小改动实现方案.docx  平台角色改进.docx  更改.md
backend/: .env  .env.example  .env.langfuse.local.example  .env.production.example  Dockerfile  README.md  alembic.ini  jwt_private.pem  jwt_public.pem  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
backend/agent/: topology_catalog.py
backend/docs/: vision_detector_protocol.md
backend/migrations/: env.py
backend/scripts/: bootstrap_quality_specs.py  download_paper_review_assets.py  export_alembic_seed_snapshot.py  import_standard_docs.py  init_paper_review_runtime.py  patch_macro_correct_transformers.py  prewarm_paper_review_engines.py  run_algo_p0_chain_demo.py  run_real_inspection_acceptance.py  seed_alerts.py  seed_paper_templates.py  standard_docs.seed.jsonl  start_languagetool.sh  verify_paper_review_assets.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_ops_api.py  test_agent_stream.py  test_alert_rule_service.py  test_algo_runtime_api.py  test_algo_workspace_api.py  test_algo_workspace_service.py  test_app_events.py  test_app_startup.py  test_approval_service.py  test_auth_log_service.py  test_auth_service.py  test_billing_service.py  test_chat_flow.py  test_chat_ops_repository.py  test_config.py  (+50 more)
(+862 files in other folders)
