[project]
name = "piap-backend"
version = "0.1.0"
description = "Product Intelligent Inspection Agent Platform (PIAP) backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "volcengine-python-sdk[ark]>=1.0.0",
    "langfuse>=2.0.0",
    "langgraph>=0.2.50",
    "python-multipart>=0.0.9",
    "pypdf>=5.4.0",
    "python-docx>=1.1.0",
    "lxml>=5.2.0",
    "pycorrector>=1.1.3",
    "macro-correct>=0.0.6",
    "transformers==4.30.2",
    "huggingface_hub>=0.23.0",
    "vale>=3.13.0.0",
    "kenlm>=0.3.0",
    "reportlab>=4.2.0",
    "minio>=7.2.7",
    "neo4j>=5.25.0",
    "paramiko>=3.4.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
